--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "watch": "react-scripts start",
     "build": "react-scripts build"
   },
   "eslintConfig": {
