--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "react": "^17.0.2",
+    "react-addons-css-transition-group": "^15.6.0",
+    "react-addons-shallow-compare": "^15.6.0",
     "react-dom": "^17.0.2",
+    "react-dom-factories": "^1.0.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-selectize": "^3.0.1",
+    "react-transition-group": "^1.1.2",
     "rebass": "^4.0.7",
     "web-vitals": "^2.1.4"
   },
