--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-addons-shallow-compare": "^15.6.0",
     "react-dom": "^17.0.2",
     "react-dom-factories": "^1.0.0",
+    "react-phone-number-input": "^3.1.47",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-selectize": "^3.0.1",
