--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.2",
     "react-addons-css-transition-group": "^15.6.0",
     "react-addons-shallow-compare": "^15.6.0",
+    "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
     "react-dom-factories": "^1.0.0",
     "react-phone-number-input": "^3.1.47",
